
*********************************************************
*  RFM 9.9.0
*********************************************************
- add compatibility with CKEditor (thanks to dennis.buijs)
- fix ordering and filtering bugs (in js and php)
- Refactoring of configuration and language files (thanks to rkgrep)
- updated libraries via bower dependency management (thanks to rkgrep)
- add Assets compilation via gulp for developing (thanks to rkgrep)


*********************************************************
*  RFM 9.8.1
*********************************************************
- add compatibility with free full resolution with aviary image editor
- convert all include(); with include ‘’;
- fix a problem with lowercase automatically change 

*********************************************************
*  RFM 9.8
*********************************************************
- added pdf, openoffice files preview with customized viewer.js
- added other office file preview with google preview
- fixed ordering bug
- improved layout style
- added copy to clipboard button on show url dialog
- fixed a bug when download a file
- fixed a bug in relative path images creation
- adding custom convert_spaces [by fungio]

*********************************************************
*  RFM 9.7.3
*********************************************************
- Fix a problem with lazy load and filters
- add option to remember text filter in session

*********************************************************
*  RFM 9.7.2
*********************************************************

***** Major *****
- Added mime type lib for downloads
- Added lazy loading feature
- Added options for auto and max image resizing
- Lang. updates
- Added touch devices support for drag&drop
- Added support for returning relative URL-s
- Bugfixes


***** Detailed *****
- Added mime type lib for downloads
	All downloads no should load successfuly

- Added lazy loading feature