@@ -1,97 +1,0 @@
-<?php
-define('lang_Select','בחר');
-define('lang_Erase','מחק');
-define('lang_Open','פתח');
-define('lang_Confirm_del','האם אתה בטוח שברצונך למחוק את הקובץ ?');
-define('lang_All','הכל');
-define('lang_Files','קבצים');
-define('lang_Images','תמונות');
-define('lang_Archives','ארכיונים');
-define('lang_Error_Upload','גודל הקובץ המצורף חורג מן הגבול המותר .');
-define('lang_Error_extension','תבנית הקובץ או סיומת הקובץ אינן חוקיות .');
-define('lang_Upload_file','העלה');
-define('lang_Filters','סננים');
-define('lang_Videos','וידאו');
-define('lang_Music','מוזיקה');
-define('lang_New_Folder','תיקיה חדשה');
-define('lang_Folder_Created','התיקיה נוצרה .');
-define('lang_Existing_Folder','התיקיה קיימת');
-define('lang_Confirm_Folder_del','האם אתה בטוח שברצונך למחוק את התיקיה וכל קבציה ?');
-define('lang_Return_Files_List','חזור לרשימת קבצים');
-define('lang_Preview','תצוגה מקדימה');
-define('lang_Download','הורד');
-define('lang_Insert_Folder_Name','הכנס שם תיקיה:');
-define('lang_Root','root');
-define('lang_Rename','שנה שם');
-define('lang_Back','חזור');
-define('lang_View','צפה');
-define('lang_View_list','תצוגת רשימה');
-define('lang_View_columns_list','תצוגת רשימה בטורים');
-define('lang_View_boxes','תצוגת קופסאות');
-define('lang_Toolbar','סרגל כלים');
-define('lang_Actions','פעולות');
-define('lang_Rename_existing_file','הקובץ כבר קיים');
-define('lang_Rename_existing_folder','התיקיה כבר קיימת');
-define('lang_Empty_name','שם הקובץ ריק');
-define('lang_Text_filter','סנן טקסט');
-define('lang_Swipe_help','סמן את הקובץ / תיקיה על מנת להציג אפשריות');
-define('lang_Upload_base','רגיל');
-define('lang_Upload_java','JAVA (לקבצים גדולים)');
-define('lang_Upload_java_help',"אם אפליקצית הJAVA לא נטענת , 1. וודא שJAVA מותקנת במחשבך , אחר <a href='http://java.com/en/download/'>לחץ להורדה</a>   2. וודא שהכל מאופשר בחומת האש .");
-define('lang_Upload_base_help',"גרור ושחרר את הקבוצים אשר הינך מעוניין לעלות . בסיום יש ללחוץ על \"חזור אל רשימת קבצים\"");
-define('lang_Type_dir','תיקיה');
-define('lang_Type','סוג');
-define('lang_Dimension','מימדים');
-define('lang_Size','גודל');
-define('lang_Date','תאריך');
-define('lang_Filename','שם הקובץ');
-define('lang_Operations','פעולות');
-define('lang_Date_type','d-m-y');
-define('lang_OK','אישור');
-define('lang_Cancel','ביטול');
-define('lang_Sorting','מיון');
-define('lang_Show_url','הצג כתובת');
-define('lang_Extract','חלץ לכאן');
-define('lang_File_info','מאפיינים');
-define('lang_Edit_image','ערוך תמונה');
-define('lang_Duplicate','שכפל');
-define('lang_Folders', 'תיקיות');
-define('lang_Copy','העתק');
-define('lang_Cut','גזור');
-define('lang_Paste','הדבק');
-define('lang_CB', 'לוח עריכה'); // clipboard
-define('lang_Paste_Here','הדבק לתיקיה זו');
-define('lang_Paste_Confirm','האם אתה בטוח שברצונך להדביק לתיקיה זו ? פעולה זו תחליף בין הקבצים במקרה של התנגשות');
-define('lang_Paste_Failed','נכשל בהעתקת קבצים');
-define('lang_Clear_Clipboard','נקה לוח עריכה');
-define('lang_Clear_Clipboard_Confirm','האם אתה בטוח שברצונך לנקות את לוח העריכה ?');
-define('lang_Files_ON_Clipboard','ישנם קבצים בלוח העריכה.');
-define('lang_Copy_Cut_Size_Limit','גודל הקובצים / התיקיה גדולים מדי %s. הגבלה: %d MB/לפעולה'); // %s = cut or copy
-define('lang_Copy_Cut_Count_Limit','בחר יותר מדי תיקיות/קבצים לפעולה %s. הגבלה: %d files/operation'); // %s = cut or copy
-define('lang_Copy_Cut_Not_Allowed','אינך ראשי ל%s קבצים.'); // %s(1) = cut or copy, %s(2) = files or folders
-define('lang_Aviary_No_Save', 'לא ניתן לשמור את התמונה .');
-define('lang_Zip_No_Extract', 'לא ניתן לחלץ , הקבץ פגום.');
-define('lang_Zip_Invalid', 'סוג או פורמט הקובץ אינו נתמך. חוקי: zip, gz, tar.');
-define('lang_Dir_No_Write', 'התיקיה שבחרת אינה ניתנת לכתיבה');
-define('lang_Function_Disabled', 'ה %s פונקציה אינה פעילה.'); // %s = cut or copy
-define('lang_File_Permission', 'הראשות קובץ');
-define('lang_File_Permission_Not_Allowed', 'שינוי %s הראשות לא ניתנת לעריכה.'); // %s = files or folders
-define('lang_File_Permission_Recursive', 'החל רקורסיביות?');
-define('lang_File_Permission_Wrong_Mode', "הרשאות שנתנו אינן חוקיות.");
-define('lang_User', 'משתמשים');
-define('lang_Group', 'קבוצות');
-define('lang_Yes', 'כן');
-define('lang_No', 'לא');
-define('lang_Lang_Not_Found', 'לא ניתן למצוא את השפה המבוקשת .');
-define('lang_Lang_Change', 'החלף שפה');
-define('lang_File_Not_Found', 'לא ניתן לאתר את הקובץ המבוקש.');
-define('lang_File_Open_Edit_Not_Allowed', 'אינך מורשה ל%s את הקובץ.'); // %s = open or edit
-define('lang_Edit', 'ערוך');
-define('lang_Edit_File', "ערוך את תוכן הקובץ");
-define('lang_File_Save_OK', "הקובץ נשמר בהצלחה .");
-define('lang_File_Save_Error', "שגיאה בעת שמירת הקובץ.");
-define('lang_New_File','קובץ חדש');
-define('lang_No_Extension','חובה לציין את סיומת הקובץ.'); 
-define('lang_Valid_Extensions','סיומות חוקיות: %s'); // %s = txt,log etc.
-
-?>
