@@ -1,0 +1,101 @@
+<?php
+
+return array(
+
+	'Select' => 'בחר',
+	'Erase' => 'מחק',
+	'Open' => 'פתח',
+	'Confirm_del' => 'האם אתה בטוח שברצונך למחוק את הקובץ ?',
+	'All' => 'הכל',
+	'Files' => 'קבצים',
+	'Images' => 'תמונות',
+	'Archives' => 'ארכיונים',
+	'Error_Upload' => 'גודל הקובץ המצורף חורג מן הגבול המותר .',
+	'Error_extension' => 'תבנית הקובץ או סיומת הקובץ אינן חוקיות .',
+	'Upload_file' => 'העלה',
+	'Filters' => 'סננים',
+	'Videos' => 'וידאו',
+	'Music' => 'מוזיקה',
+	'New_Folder' => 'תיקיה חדשה',
+	'Folder_Created' => 'התיקיה נוצרה .',
+	'Existing_Folder' => 'התיקיה קיימת',
+	'Confirm_Folder_del' => 'האם אתה בטוח שברצונך למחוק את התיקיה וכל קבציה ?',
+	'Return_Files_List' => 'חזור לרשימת קבצים',
+	'Preview' => 'תצוגה מקדימה',
+	'Download' => 'הורד',
+	'Insert_Folder_Name' => 'הכנס שם תיקיה:',
+	'Root' => 'root',
+	'Rename' => 'שנה שם',
+	'Back' => 'חזור',
+	'View' => 'צפה',
+	'View_list' => 'תצוגת רשימה',
+	'View_columns_list' => 'תצוגת רשימה בטורים',
+	'View_boxes' => 'תצוגת קופסאות',
+	'Toolbar' => 'סרגל כלים',
+	'Actions' => 'פעולות',
+	'Rename_existing_file' => 'הקובץ כבר קיים',
+	'Rename_existing_folder' => 'התיקיה כבר קיימת',
+	'Empty_name' => 'שם הקובץ ריק',
+	'Text_filter' => 'סנן טקסט',
+	'Swipe_help' => 'סמן את הקובץ / תיקיה על מנת להציג אפשריות',
+	'Upload_base' => 'רגיל',
+	'Upload_java' => 'JAVA (לקבצים גדולים)',
+	'Upload_java_help' => "אם אפליקצית הJAVA לא נטענת , 1. וודא שJAVA מותקנת במחשבך , אחר <a href='http://java.com/en/download/'>לחץ להורדה</a>   2. וודא שהכל מאופשר בחומת האש .",
+	'Upload_base_help' => "גרור ושחרר את הקבוצים אשר הינך מעוניין לעלות . בסיום יש ללחוץ על \"חזור אל רשימת קבצים\"",
+	'Type_dir' => 'תיקיה',
+	'Type' => 'סוג',
+	'Dimension' => 'מימדים',
+	'Size' => 'גודל',
+	'Date' => 'תאריך',
+	'Filename' => 'שם הקובץ',
+	'Operations' => 'פעולות',
+	'Date_type' => 'd-m-y',
+	'OK' => 'אישור',
+	'Cancel' => 'ביטול',
+	'Sorting' => 'מיון',
+	'Show_url' => 'הצג כתובת',
+	'Extract' => 'חלץ לכאן',
+	'File_info' => 'מאפיינים',
+	'Edit_image' => 'ערוך תמונה',
+	'Duplicate' => 'שכפל',
+	'Folders', 'תיקיות',
+	'Copy' => 'העתק',
+	'Cut' => 'גזור',
+	'Paste' => 'הדבק',
+	'CB', 'לוח עריכה', // clipboard
+	'Paste_Here' => 'הדבק לתיקיה זו',
+	'Paste_Confirm' => 'האם אתה בטוח שברצונך להדביק לתיקיה זו ? פעולה זו תחליף בין הקבצים במקרה של התנגשות',
+	'Paste_Failed' => 'נכשל בהעתקת קבצים',
+	'Clear_Clipboard' => 'נקה לוח עריכה',
+	'Clear_Clipboard_Confirm' => 'האם אתה בטוח שברצונך לנקות את לוח העריכה ?',
+	'Files_ON_Clipboard' => 'ישנם קבצים בלוח העריכה.',
+	'Copy_Cut_Size_Limit' => 'גודל הקובצים / התיקיה גדולים מדי %s. הגבלה: %d MB/לפעולה', // %s = cut or copy
+	'Copy_Cut_Count_Limit' => 'בחר יותר מדי תיקיות/קבצים לפעולה %s. הגבלה: %d files/operation', // %s = cut or copy
+	'Copy_Cut_Not_Allowed' => 'אינך ראשי ל%s קבצים.', // %s(1) = cut or copy, %s(2) = files or folders
+	'Aviary_No_Save', 'לא ניתן לשמור את התמונה .',
+	'Zip_No_Extract', 'לא ניתן לחלץ , הקבץ פגום.',
+	'Zip_Invalid', 'סוג או פורמט הקובץ אינו נתמך. חוקי: zip, gz, tar.',
+	'Dir_No_Write', 'התיקיה שבחרת אינה ניתנת לכתיבה',
+	'Function_Disabled', 'ה %s פונקציה אינה פעילה.', // %s = cut or copy
+	'File_Permission', 'הראשות קובץ',
+	'File_Permission_Not_Allowed', 'שינוי %s הראשות לא ניתנת לעריכה.', // %s = files or folders
+	'File_Permission_Recursive', 'החל רקורסיביות?',
+	'File_Permission_Wrong_Mode', "הרשאות שנתנו אינן חוקיות.",
+	'User', 'משתמשים',
+	'Group', 'קבוצות',
+	'Yes', 'כן',
+	'No', 'לא',
+	'Lang_Not_Found', 'לא ניתן למצוא את השפה המבוקשת .',
+	'Lang_Change', 'החלף שפה',
+	'File_Not_Found', 'לא ניתן לאתר את הקובץ המבוקש.',
+	'File_Open_Edit_Not_Allowed', 'אינך מורשה ל%s את הקובץ.', // %s = open or edit
+	'Edit', 'ערוך',
+	'Edit_File', "ערוך את תוכן הקובץ",
+	'File_Save_OK', "הקובץ נשמר בהצלחה .",
+	'File_Save_Error', "שגיאה בעת שמירת הקובץ.",
+	'New_File' => 'קובץ חדש',
+	'No_Extension' => 'חובה לציין את סיומת הקובץ.', 
+	'Valid_Extensions' => 'סיומות חוקיות: %s', // %s = txt,log etc.
+
+);
+
