@@ -7,7 +7,8 @@ Responsive Filemanager Changelog
 - fix ordering and filtering bugs (in js and php)
 - Refactoring of configuration and language files (thanks to rkgrep)
 - updated libraries via bower dependency management (thanks to rkgrep)
-- add Assets compilation via gulp for developing (thanks to rkgrep)
+- added Assets compilation via gulp for developing (thanks to rkgrep)
+- added Hebrew lang (sagie212)
 
 
 *********************************************************
